--- a/src/app/seller/add-product/add-product.component.html
+++ b/src/app/seller/add-product/add-product.component.html
@@ -1,5 +1,34 @@
+<div class="col-md-9">
+    <div class="card">
+        <h1>content</h1>
+    </div>
+    <!-- <form action="" method="POST" [formGroup]="form"  enctype="multipart/form-data" (ngSubmit)="addproduct()"> -->
+    <form  method="POST"  enctype="multipart/form-data"  (ngSubmit)="addproduct()">
+        <div class="row mt-4">
+            <div class="col-sm-6 ">
+            <input type="text" class="form-control" name="name" [(ngModel)]="name" maxlength="254" required="" id="id_name" placeholder="product name">
+            </div>
+            <div class="col-sm-6" >
+            <select name="category" id="id_category"  class="form-control" [(ngModel)]="category"  >
+                <option name="category" id="id_category" *ngFor="let c of gdt"   class="form-control" >{{c.name}}</option>
+            </select>
+            </div>
+        </div>
+        <textarea name="description" class="form-control mt-4" cols="10" rows="10" required="" [(ngModel)]="description" id="id_description" placeholder="description"></textarea>
+        <div class="row mt-4">
+            <div class="col-sm-6">
+                <!-- <input type="file" class="form-control-file" name="product_image" required="" id="id_product_image" [(ngModel)]="res.product_image"> -->
+                <input type="file" class="form-control-file" name="product_image"  (change)="onChange($event)">
+            </div>
+            <div class="col-sm-3">
+                <input type="number" name="price" class="form-control" required="" id="id_price" placeholder="product price" [(ngModel)]="price">
+            </div>
+            <div class="col-sm-3">
+                <input type="number" name="stock" class="form-control" required="" id="id_stock" placeholder="number of stock" [(ngModel)]="stock">
+            </div>
+        </div>
 
-
-
-<!-- <input type="text" [(ngModel)]="inputValue"> -->
+            <button type="submit" class="btn btn-info mt-4">Add product</button>
+        
+    </form> 
 
