buyer module started

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,19 +4,19 @@
 <app-offers-bar></app-offers-bar>
 <app-product-list></app-product-list> -->
 <!-- <app-home></app-home> -->
-<app-seller-nav></app-seller-nav>
+
+<!-- <app-seller-nav></app-seller-nav>
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-3">
             <app-seller-side-nav></app-seller-side-nav>
         </div>
         <div class="col-sm-9">
-            <!-- <app-seller-dashboard></app-seller-dashboard> -->
-            <!-- <app-add-product></app-add-product> -->
+            
             <router-outlet></router-outlet>
         </div>
     </div>
 
-</div>
+</div> -->
 
-
+<router-outlet></router-outlet>
