--- a/src/app/seller/update-product/update-product.component.html
+++ b/src/app/seller/update-product/update-product.component.html
@@ -9,17 +9,17 @@
             <div class="col-sm-6 ">
             <input type="text" class="form-control" name="name"  maxlength="254" [(ngModel)]="name" value="{{gdt.name}}"  id="id_name" placeholder="{{gdt.name}}">
             </div>
-            <!-- <div class="col-sm-6" >
+            <div class="col-sm-6" >
             <select name="category" id="id_category"  class="form-control" [(ngModel)]="category" value="{{gdt.category}}" >
-                <option name="category" id="id_category" *ngFor="let c of gdt"   class="form-control" >{{c.name}}</option>
+                <option name="category" id="id_category" *ngFor="let c of gdc"   class="form-control" >{{c.name}}</option>
             </select>
-            </div> -->
+            </div>
         </div>
         <textarea name="description" class="form-control mt-4" cols="10" rows="10" [(ngModel)]="description"   id="id_description"  placeholder="{{gdt.description}}"></textarea>
         <div class="row mt-4">
             <div class="col-sm-6">
-               
-                <input type="file" class="form-control-file" name="product_image"  (change)="onChange($event)">
+                <input type="file" class="form-control-file" name="product_image" value="{{ gdt.product_image}}"  (change)="onChange($event)">
+                <!-- <img src="http://localhost:8000{{ gdt.product_image }}" alt="" style="width: 30px;height: 40px;"> -->
             </div>
             <div class="col-sm-3">
                 <input type="number" name="price" class="form-control"  id="id_price" [(ngModel)]="price" placeholder="{{ gdt.price}}"  value="{{ gdt.price}}">
