--- a/src/app/seller/seller-side-nav/seller-side-nav.component.html
+++ b/src/app/seller/seller-side-nav/seller-side-nav.component.html
@@ -5,24 +5,24 @@
                 <!-- <div class="card mt-2 mb-3 shadow p-3 mb-5"> -->
                     <!-- <img class="rounded-circle img-fluid mt-2" width="80"  src="https://www.w3schools.com/bootstrap4/newyork.jpg" alt=""> -->
                 
-                    <p>user</p>
+                    <p>{{user}}</p>
                     
                 <!-- </div> -->
             </div>
             
             <div class="col ">
                 
-                <a routerLink="/Dashboard" routerLinkActive="active">
+                <a routerLink="/seller/Dashboard" routerLinkActive="active">
                     <div class="card mt-2 text-white bg-primary mb-3 shadow p-3 mb-5 ">
                         <p>Dashboard</p>
                     </div>
                  </a>
-                 <a routerLink="Addproduct" routerLinkActive="active">
+                 <a routerLink="/seller/Addproduct" routerLinkActive="active">
                     <div class="card mt-2 text-white bg-info mb-3 shadow p-3 mb-5">
                         <p>Add product</p>
                     </div>
                 </a>
-                 <a routerLink="Productorders" routerLinkActive="active">
+                 <a routerLink="/seller/orders" routerLinkActive="active">
                     <div class="card mt-2 text-white bg-info mb-3 shadow p-3 mb-5">
                         <p>orders</p>
                     </div>
