product view added

--- a/src/app/category-nav/category-nav.component.html
+++ b/src/app/category-nav/category-nav.component.html
@@ -3,7 +3,7 @@
         <div class="container-fluid">
         <div class="row">
 
-          <div class="col-sm-1" *ngFor="let dt of gdt">
+          <div class="col-sm-1 text-center" *ngFor="let dt of gdt">
             <!-- <center> -->
               <img class="rounded-circle img-fluid"  [src]="dt.category_image" alt="" style="height: 100px;width: 100px;">
             <!-- </center> -->
