--- a/src/app/buyer/buyer-dashboard/buyer-dashboard.component.html
+++ b/src/app/buyer/buyer-dashboard/buyer-dashboard.component.html
@@ -1,1 +1,8 @@
-<p>buyer-dashboard works!</p>
+<app-top-nav></app-top-nav>
+<!-- <app-cart></app-cart> -->
+<!-- <app-offer-bar></app-offer-bar> -->
+<router-outlet></router-outlet>
+
+   <div class="fixed-bottom">
+    <h1>footer</h1>
+   </div>
