--- a/src/app/buyer/offer-bar/offer-bar.component.html
+++ b/src/app/buyer/offer-bar/offer-bar.component.html
@@ -1,1 +1,39 @@
-<p>offer-bar works!</p>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+
+      <div *ngFor="let dt of gdt; first as isFirst">
+        <!-- <div *ngIf="dt.index == 0; then thenBlock else elseBlock"> -->
+          
+          <div class="carousel-item active" *ngIf="isFirst" >
+            <img class="w-100 d-inline-block" style = "height: 300px;" src="{{ dt.baner_img }}" alt="">
+          </div>
+          <div class="carousel-item" >
+            <img class="w-100 d-inline-block" style = "height: 300px;" src="{{ dt.baner_img }}" alt="">
+          </div>
+          <!-- <h3>{{ dt. }}</h3> -->
+          <!-- <ng-template #thenBlock>
+            <div class="carousel-item active" >
+              <img class="w-100 d-inline-block" style = "height: 300px;" src="{{ dt.baner_img }}" alt="">
+            </div>
+          </ng-template>
+          <ng-template #elseBlock>
+            <div class="carousel-item " >
+              <img class="w-100 d-inline-block" style = "height: 300px;" src="{{ dt.baner_img }}" alt="">
+            </div>
+          </ng-template> -->
+          <!-- <img class="w-100 d-inline-block" style = "height: 300px;" [src]=" dt.baner_img " alt=""> -->
+        <!-- </div> -->
+      </div>
+
+
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  
