--- a/src/app/buyer/buyer-dashboard/buyer-dashboard.component.html
+++ b/src/app/buyer/buyer-dashboard/buyer-dashboard.component.html
@@ -3,6 +3,6 @@
 <!-- <app-offer-bar></app-offer-bar> -->
 <router-outlet></router-outlet>
 
-   <div class="fixed-bottom">
+   <div class="fixed-bottom navbar-light bg-light">
     <h1>footer</h1>
    </div>
