--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -1,8 +1,44 @@
-<form action="" (ngSubmit)="login()">
+
+
+  <div class="container">
+      <div class="row">
+        <div class="col-md-3"></div> 
+            <div class="col-md-6">
+                <div class="card shadow mt-4">
+                    <form action="" (ngSubmit)="login()">
+                        <input class="form-control mt-4" type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username" [(ngModel)]="user.username" placeholder="username">
+                        <br>
+                        <input class="form-control" type="password" name="password" autocomplete="current-password" required="" id="id_password" [(ngModel)]="user.password" placeholder="password">
+                        <br>
+                        <div class="row ">
+                            <div class="col-sm-4 d-flex justify-content-center">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="logout()">Close</button>
+                            </div>
+                            <div class="col-sm-4 d-flex justify-content-center">
+                                <a routerLink="/account/signup" routerLinkActive="active">
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signupModal">
+                                    signup
+                                </button></a>
+                            </div>
+                            <div class="col-sm-4 d-flex justify-content-center">
+                                <button type="submit" class="btn btn-primary" >Login</button>
+                            </div>
+                        </div>
+                        <br>
+                    </form>
+                </div>
+            </div>
+        <div class="col-md-4"></div>
+      </div>
+   
+  </div>
+
+
+<!-- <form action="" (ngSubmit)="login()">
     <input type="text" name="login-username" [(ngModel)]="user.username">
     <input type="text" name="login-password" [(ngModel)]="user.password">
     <button type="submit" >login</button>
 
 
 </form>
-<button type="submit" (click)="logout()">logout</button>
+<button type="submit" (click)="logout()">logout</button> -->
