--- a/src/app/account/signup/signup.component.html
+++ b/src/app/account/signup/signup.component.html
@@ -1,3 +1,43 @@
-<form action="" (ngSubmit)="signup()">
-    <input type="text" name="login-username" [(ngModel)]="register.username">
-</form>
+
+
+
+
+<div class="container">
+    <div class="row">
+      <div class="col-md-3"></div> 
+          <div class="col-md-6">
+              <div class="card shadow mt-4 ">
+                  <form action="" (ngSubmit)="signup()">
+                      <input class="form-control mt-4" type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" [(ngModel)]="sign.username" placeholder="username">
+                      <br>
+                      <input class="form-control" type="text" name="full name" required=""  [(ngModel)]="sign.fullname" placeholder="fullname">
+                      <br>
+                      <input class="form-control" type="email" name="email" required=""  [(ngModel)]="sign.email" placeholder="email">
+                      <br>
+                      <input class="form-control" type="password" name="password"  required=""  [(ngModel)]="sign.password" placeholder="password">
+                      <br>
+                      <div class="row ">
+                          <div class="col-sm-4 d-flex justify-content-center">
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="logout()">Close</button>
+                          </div>
+                          <div class="col-sm-4 d-flex justify-content-center">
+                              <button type="submit" class="btn btn-primary">
+                                signup
+                              </button>
+                          </div>
+                         
+                          <div class="col-sm-4 d-flex justify-content-center">
+                            <a routerLink="/account/login" routerLinkActive="active">
+                                <button type="submit" class="btn btn-primary" >Login</button>
+                            </a> 
+                          </div>
+                      </div>
+                      <br>
+                  </form>
+              </div>
+          </div>
+      <div class="col-md-4"></div>
+    </div>
+ 
+</div>
+
