--- a/src/app/buyer/buyer-profile/buyer-profile.component.html
+++ b/src/app/buyer/buyer-profile/buyer-profile.component.html
@@ -1,1 +1,45 @@
-<p>buyer-profile works!</p>
+<div class="container-fluid rounded bg-white mt-5 mb-5">
+    <div class="row" *ngFor="let p of udata">
+        <div class="col-md-4 border-right">
+            <div class="card">
+                <!-- <h1>pro</h1> -->
+                <!-- <div class="d-flex flex-column align-items-center text-center p-3 py-5"></div> -->
+                <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">{{ p.username}}</span><span class="text-black-50">{{ p.email}}</span><span> </span></div>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div class="card">
+                <div class="col-md-12 ">
+                    <div class="p-3 py-5">
+                        <div class="d-flex justify-content-between align-items-center mb-3">
+                            <h4 class="text-right">Profile Settings</h4>
+                        </div>
+                        <div class="row mt-2">
+                            <div class="col-md-6 p-3 py-5">
+                                        <div class="card   align-items-center">
+                                            <h6>Product in Cart</h6>
+                                            <h5>NoS:{{ count.length }}</h5>
+                                            <h4>RS:{{ tprice }}/-</h4>
+                                        </div>
+                            </div>
+                            <div class="col-md-6 p-3 py-5">
+                                <div class="card   align-items-center">
+                                    <p>Product ordered</p>
+                                    <h1>0</h1>
+                                </div>
+                            </div>
+                            <div class="row" >
+                                <div class="col-md-6"><label class="labels">Username</label><input type="text" class="form-control" placeholder="{{ p.username }}" value=""></div>
+                                <div class="col-md-6"><label class="labels">Fullname</label><input type="text" class="form-control" value="" placeholder="{{ p.name }}"></div>
+                            </div>
+                            <div class="row" >
+                                <div class="col-md-6"><label class="labels">Email</label><input type="text" class="form-control" placeholder="{{ p.email }}" value=""></div>
+                                <div class="col-md-6"><label class="labels">Address</label><input type="text" class="form-control" value="" placeholder=""></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
